# analyst_agent

./: .env.example  .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
src/: guardrails.py  main.py
src/engine/: client.py  pandas_ai.py
src/output/: formatter.py
src/slack_bot/: slack_bot.py
tests/: test_client.py  test_formatter.py  test_guardrails.py
